# cookiecutter-fastapi

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
tests/: test_create_template.py
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose-debug.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/src/: main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_main.py
