[tool.poetry]
name = "cookiecutter-poetry"
version = "0.1.0"
description = "Cookiecutter template for a Python project with Poetry"
authors = ["gotofritz, javrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"
pytest-random-order = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
safety = "^2.1.1"
mypy = "^0.971"
pytest-cookies = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "tests"

[tool.pytest]
norecursedirs = "{{cookiecutter.directory_name}}"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--random-order",
]

[tool.black]
line_length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
ignore = []
extend-exclude = []
